force-app/main/default/objects/redwing__Acquisition_Rule_Item__c/redwing__Acquisition_Rule_Item__c.object-meta.xml
<CustomObject>
    <label>Acquisition Rule Item</label>
    <nameField>
        <displayFormat>ARI-{0000}</displayFormat>
        <label>Acquisition Rule Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acquisition Rule Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>