force-app/main/default/objects/redwing__Acquisition_Rule_Item__c/fields/redwing__Acquisition_Rule__c.field-meta.xml
<CustomField>
    <fullName>redwing__Acquisition_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquisition Rule</label>
    <referenceTo>redwing__Acquisition_Rule__c</referenceTo>
    <relationshipLabel>Acquisition Rule Items</relationshipLabel>
    <relationshipName>Acquisition_Rule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>