force-app/main/default/objects/redwing__Acquisition_Rule_Item__c/fields/redwing__Learning_Trac__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Trac__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Trac</label>
    <referenceTo>redwing__Training_Track__c</referenceTo>
    <relationshipLabel>Acquisition Rule Items</relationshipLabel>
    <relationshipName>Acquisition_Rule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>