force-app/main/default/objects/redwing__Acquisition_Rule_Item__c/fields/redwing__Main_Achievement__c.field-meta.xml
<CustomField>
    <fullName>redwing__Main_Achievement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the achievement will be displayed as a main badge on the Learning Header.</inlineHelpText>
    <label>Main Achievement</label>
    <type>Checkbox</type>
</CustomField>