force-app/main/default/objects/redwing__Acquisition_Rule_Item__c/fields/redwing__Order__c.field-meta.xml
<CustomField>
    <fullName>redwing__Order__c</fullName>
    <inlineHelpText>Number that defines the position in which the learning will appear on the Achievement Details page.</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>